# AutoTract

./: AutoTract.cxx  AutoTract.h  AutoTract.ui  AutoTract.xml  AutoTractDerivedWindow.cxx  AutoTractDerivedWindow.h  AutoTractWindow.cxx  AutoTractWindow.h  CMakeLists.txt  MainScriptThread.cxx  MainScriptThread.h  MaskCreation.cxx  MaskCreation.h  Pipeline.cxx  Pipeline.h  README.md  Registration.cxx  Registration.h  Script.cxx  Script.h  SingleTractProcess.cxx  SingleTractProcess.h  TractPopulationProcess.cxx  TractPopulationProcess.h  dependances.txt  main.cxx  resources.qrc
